# fluent-bit

./: .gitignore  .gitmodules  CMakeLists.txt  README.LogInsight.md
conf/: in_lua.conf  lua_engine.lua
include/fluent-bit/: flb_lua_common.h
inotify/: a.out  config.lua  inotify.c  inotify.h  linotify.lua  main.lua  test.c  test_branch.lua
plugins/: CMakeLists.txt
plugins/in_lua/: CMakeLists.txt  in_lua.c  in_lua.h  in_lua_config.c  in_lua_config.h  in_lua_exec.c  in_lua_exec.h  in_lua_file.c  in_lua_file.h  in_lua_limit.c  in_lua_limit.h  in_lua_tool.c  in_lua_tool.h  test_lua_tool.c
plugins/in_stdin/: in_stdin.c
plugins/out_lua/: CMakeLists.txt  storage_command.c  storage_command.h  storage_lua.c  storage_lua.h  storage_lua_meta.c  storage_lua_meta.h  storage_pack.c  storage_pack.h  storage_type.h
src/: flb_engine.c  flb_io.c  fluent-bit.c
test/: fork.c  test.lua
tests/: tst_read_config.py
